# reliable-rag-graph

./: .env.example  Dockerfile  docker-compose.yml  pyproject.toml
reliable_rag_graph/: server.py
reliable_rag_graph/graph/: definitions.py  graph.py  logger.py
reliable_rag_graph/graph/edges/: final_answer.py  has_hallucinated.py  rag_or_web.py  ready_to_generate.py
reliable_rag_graph/graph/nodes/: answer_grader.py  documents_grader.py  generater.py  hallucinator.py  rag_retriever.py  router.py  web_retriever.py
reliable_rag_graph/graph/utils/: check_file_type.py  upsert_file.py  write_file.py
reliable_rag_graph/utils/: write_file.py
usage_examples/python3/: requests_example.py  upload_file.py
